--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "hubot-seen": "^0.2.2",
     "hubot-shipit": "^0.2.0",
     "hubot-slack": "^3.3.0",
-    "hubot-travis-ci": "0.0.2"
+    "hubot-travis-ci": "0.0.2",
+    "hubot-trello": "*"
   },
   "engines": {
     "node": "0.10.x"
